deleted.cpp
@@ -22,8 +22,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 #include "workspace.h"
 #include "client.h"
+#include "group.h"
 #include "netinfo.h"
 #include "shadow.h"
+#include "shell_client.h"
 #include "decorations/decoratedclient.h"
 #include "decorations/decorationrenderer.h"
 
@@ -46,6 +48,10 @@ Deleted::Deleted()
     , m_fullscreen(false)
     , m_keepAbove(false)
     , m_keepBelow(false)
+    , m_wasActive(false)
+    , m_wasX11Client(false)
+    , m_wasWaylandClient(false)
+    , m_wasGroupTransient(false)
 {
 }
 
@@ -56,6 +62,14 @@ Deleted::~Deleted()
     assert(delete_refcount == 0);
     if (workspace()) {
         workspace()->removeDeleted(this);
+    }
+    for (Toplevel *toplevel : qAsConst(m_transientFor)) {
+        if (auto *deleted = qobject_cast<Deleted *>(toplevel)) {
+            deleted->removeTransient(this);
+        }
+    }
+    for (Deleted *transient : qAsConst(m_transients)) {
+        transient->removeTransientFor(this);
     }
     deleteEffectWindow();
 }
@@ -117,7 +131,29 @@ void Deleted::copyToDeleted(Toplevel* c)
         m_keepAbove = client->keepAbove();
         m_keepBelow = client->keepBelow();
         m_caption = client->caption();
+
+        m_wasActive = client->isActive();
+
+        const auto *x11Client = qobject_cast<Client *>(client);
+        m_wasGroupTransient = x11Client && x11Client->groupTransient();
+
+        if (m_wasGroupTransient) {
+            const auto members = x11Client->group()->members();
+            for (Client *member : members) {
+                if (member != client) {
+                    addTransientFor(member);
+                }
+            }
+        } else {
+            AbstractClient *transientFor = client->transientFor();
+            if (transientFor != nullptr) {
+                addTransientFor(transientFor);
+            }
+        }
     }
+
+    m_wasWaylandClient = qobject_cast<ShellClient *>(c) != nullptr;
+    m_wasX11Client = !m_wasWaylandClient;
 }
 
 void Deleted::unrefWindow()
@@ -192,6 +228,22 @@ void Deleted::mainClientClosed(Toplevel *client)
         m_mainClients.removeAll(c);
 }
 
+void Deleted::transientForClosed(Toplevel *toplevel, Deleted *deleted)
+{
+    if (deleted == nullptr) {
+        m_transientFor.removeAll(toplevel);
+        return;
+    }
+
+    const int index = m_transientFor.indexOf(toplevel);
+    if (index == -1) {
+        return;
+    }
+
+    m_transientFor[index] = deleted;
+    deleted->addTransient(this);
+}
+
 xcb_window_t Deleted::frameId() const
 {
     return m_frame;
@@ -205,6 +257,27 @@ double Deleted::opacity() const
 QByteArray Deleted::windowRole() const
 {
     return m_windowRole;
+}
+
+void Deleted::addTransient(Deleted *transient)
+{
+    m_transients.append(transient);
+}
+
+void Deleted::removeTransient(Deleted *transient)
+{
+    m_transients.removeAll(transient);
+}
+
+void Deleted::addTransientFor(AbstractClient *parent)
+{
+    m_transientFor.append(parent);
+    connect(parent, &AbstractClient::windowClosed, this, &Deleted::transientForClosed);
+}
+
+void Deleted::removeTransientFor(Deleted *parent)
+{
+    m_transientFor.removeAll(parent);
 }
 
 } // namespace
