deleted.h
@@ -104,14 +104,89 @@ public:
     QString caption() const {
         return m_caption;
     }
+
+    /**
+     *  Returns whether the client was active.
+     *
+     * @returns @c true if the client was active at the time when it was closed,
+     *   @c false otherwise
+     **/
+    bool wasActive() const {
+        return m_wasActive;
+    }
+
+    /**
+     * Returns whether this was an X11 client.
+     *
+     * @returns @c true if it was an X11 client, @c false otherwise.
+     **/
+    bool wasX11Client() const {
+        return m_wasX11Client;
+    }
+
+    /**
+     * Returns whether this was a Wayland client.
+     *
+     * @returns @c true if it was a Wayland client, @c false otherwise.
+     **/
+    bool wasWaylandClient() const {
+        return m_wasWaylandClient;
+    }
+
+    /**
+     * Returns whether the client was a transient.
+     *
+     * @returns @c true if it was a transient, @c false otherwise.
+     **/
+    bool wasTransient() const {
+        return !m_transientFor.isEmpty();
+    }
+
+    /**
+     * Returns whether the client was a group transient.
+     *
+     * @returns @c true if it was a group transient, @c false otherwise.
+     * @note This is relevant only for X11 clients.
+     **/
+    bool wasGroupTransient() const {
+        return m_wasGroupTransient;
+    }
+
+    /**
+     * Checks whether this client was a transient for given toplevel.
+     *
+     * @param toplevel Toplevel against which we are testing.
+     * @returns @c true if it was a transient for given toplevel, @c false otherwise.
+     **/
+    bool wasTransientFor(const Toplevel *toplevel) const {
+        return m_transientFor.contains(const_cast<Toplevel *>(toplevel));
+    }
+
+    /**
+     * Returns the list of transients.
+     *
+     * Because the window is Deleted, it can have only Deleted child transients.
+     **/
+    DeletedList transients() const {
+        return m_transients;
+    }
+
 protected:
     virtual void debug(QDebug& stream) const;
 private Q_SLOTS:
     void mainClientClosed(KWin::Toplevel *client);
+    void transientForClosed(Toplevel *toplevel, Deleted *deleted);
+
 private:
     Deleted();   // use create()
     void copyToDeleted(Toplevel* c);
     virtual ~Deleted(); // deleted only using unrefWindow()
+
+    void addTransient(Deleted *transient);
+    void removeTransient(Deleted *transient);
+    void addTransientFor(AbstractClient *parent);
+    void removeTransientFor(Deleted *parent);
+
     int delete_refcount;
     double window_opacity;
     int desk;
@@ -140,6 +215,12 @@ private:
     bool m_keepAbove;
     bool m_keepBelow;
     QString m_caption;
+    bool m_wasActive;
+    bool m_wasX11Client;
+    bool m_wasWaylandClient;
+    bool m_wasGroupTransient;
+    ToplevelList m_transientFor;
+    DeletedList m_transients;
 };
 
 inline void Deleted::refWindow()
