autotests/integration/stacking_order_test.cpp
@@ -23,6 +23,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #include "abstract_client.h"
 #include "atoms.h"
 #include "client.h"
+#include "deleted.h"
 #include "main.h"
 #include "platform.h"
 #include "shell_client.h"
@@ -51,9 +52,11 @@ private Q_SLOTS:
 
     void testTransientIsAboveParent();
     void testRaiseTransient();
+    void testDeletedTransient();
 
     void testGroupTransientIsAboveWindowGroup();
     void testRaiseGroupTransient();
+    void testDeletedGroupTransient();
     void testDontKeepAboveNonModalDialogGroupTransients();
 
 };
@@ -61,6 +64,7 @@ private Q_SLOTS:
 void StackingOrderTest::initTestCase()
 {
     qRegisterMetaType<KWin::AbstractClient *>();
+    qRegisterMetaType<KWin::Deleted *>();
     qRegisterMetaType<KWin::ShellClient *>();
 
     QSignalSpy workspaceCreatedSpy(kwinApp(), &Application::workspaceCreated);
@@ -200,6 +204,98 @@ void StackingOrderTest::testRaiseTransient()
     QTRY_VERIFY(transient->isActive());
     QTRY_VERIFY(!anotherClient->isActive());
     QCOMPARE(workspace()->stackingOrder(), (ToplevelList{anotherClient, parent, transient}));
+}
+
+struct WindowUnrefDeleter
+{
+    static inline void cleanup(Deleted *d) {
+        if (d != nullptr) {
+            d->unrefWindow();
+        }
+    }
+};
+
+void StackingOrderTest::testDeletedTransient()
+{
+    // This test verifies that deleted transients are kept above their
+    // old parents.
+
+    // Create the parent.
+    KWayland::Client::Surface *parentSurface =
+        Test::createSurface(Test::waylandCompositor());
+    QVERIFY(parentSurface);
+    KWayland::Client::ShellSurface *parentShellSurface =
+        Test::createShellSurface(parentSurface, parentSurface);
+    QVERIFY(parentShellSurface);
+    ShellClient *parent = Test::renderAndWaitForShown(parentSurface, QSize(256, 256), Qt::blue);
+    QVERIFY(parent);
+    QVERIFY(parent->isActive());
+    QVERIFY(!parent->isTransient());
+
+    QCOMPARE(workspace()->stackingOrder(), (ToplevelList{parent}));
+
+    // Create the first transient.
+    KWayland::Client::Surface *transient1Surface =
+        Test::createSurface(Test::waylandCompositor());
+    QVERIFY(transient1Surface);
+    KWayland::Client::ShellSurface *transient1ShellSurface =
+        Test::createShellSurface(transient1Surface, transient1Surface);
+    QVERIFY(transient1ShellSurface);
+    transient1ShellSurface->setTransient(parentSurface, QPoint(0, 0));
+    ShellClient *transient1 = Test::renderAndWaitForShown(
+        transient1Surface, QSize(128, 128), Qt::red);
+    QVERIFY(transient1);
+    QTRY_VERIFY(transient1->isActive());
+    QVERIFY(transient1->isTransient());
+    QCOMPARE(transient1->transientFor(), parent);
+
+    QCOMPARE(workspace()->stackingOrder(), (ToplevelList{parent, transient1}));
+
+    // Create the second transient.
+    KWayland::Client::Surface *transient2Surface =
+        Test::createSurface(Test::waylandCompositor());
+    QVERIFY(transient2Surface);
+    KWayland::Client::ShellSurface *transient2ShellSurface =
+        Test::createShellSurface(transient2Surface, transient2Surface);
+    QVERIFY(transient2ShellSurface);
+    transient2ShellSurface->setTransient(transient1Surface, QPoint(0, 0));
+    ShellClient *transient2 = Test::renderAndWaitForShown(
+        transient2Surface, QSize(128, 128), Qt::red);
+    QVERIFY(transient2);
+    QTRY_VERIFY(transient2->isActive());
+    QVERIFY(transient2->isTransient());
+    QCOMPARE(transient2->transientFor(), transient1);
+
+    QCOMPARE(workspace()->stackingOrder(), (ToplevelList{parent, transient1, transient2}));
+
+    // Activate the parent, both transients have to be above it.
+    workspace()->activateClient(parent);
+    QTRY_VERIFY(parent->isActive());
+    QTRY_VERIFY(!transient1->isActive());
+    QTRY_VERIFY(!transient2->isActive());
+
+    // Close the top-most transient.
+    connect(transient2, &ShellClient::windowClosed, this,
+        [](Toplevel *toplevel, Deleted *deleted) {
+            Q_UNUSED(toplevel)
+            deleted->refWindow();
+        }
+    );
+
+    QSignalSpy windowClosedSpy(transient2, &ShellClient::windowClosed);
+    QVERIFY(windowClosedSpy.isValid());
+    delete transient2ShellSurface;
+    delete transient2Surface;
+    QVERIFY(windowClosedSpy.wait());
+
+    QScopedPointer<Deleted, WindowUnrefDeleter> deletedTransient(
+        windowClosedSpy.first().at(1).value<Deleted *>());
+    QVERIFY(deletedTransient.data());
+
+    // The deleted transient still has to be above its old parent (transient1).
+    QTRY_VERIFY(parent->isActive());
+    QTRY_VERIFY(!transient1->isActive());
+    QCOMPARE(workspace()->stackingOrder(), (ToplevelList{parent, transient1, deletedTransient.data()}));
 }
 
 static xcb_window_t createGroupWindow(xcb_connection_t *conn,
@@ -499,6 +595,127 @@ void StackingOrderTest::testRaiseGroupTransient()
     workspace()->activateClient(transient);
     QTRY_VERIFY(transient->isActive());
     QCOMPARE(workspace()->stackingOrder(), (ToplevelList{member1, leader, member2, anotherClient, transient}));
+}
+
+void StackingOrderTest::testDeletedGroupTransient()
+{
+    // This test verifies that deleted group transients are kept above their
+    // old window groups.
+
+    const QRect geometry = QRect(0, 0, 128, 128);
+
+    QScopedPointer<xcb_connection_t, XcbConnectionDeleter> conn(
+        xcb_connect(nullptr, nullptr));
+
+    QSignalSpy windowCreatedSpy(workspace(), &Workspace::clientAdded);
+    QVERIFY(windowCreatedSpy.isValid());
+
+    // Create the group leader.
+    xcb_window_t leaderWid = createGroupWindow(conn.data(), geometry);
+    xcb_map_window(conn.data(), leaderWid);
+    xcb_flush(conn.data());
+
+    QVERIFY(windowCreatedSpy.wait());
+    Client *leader = windowCreatedSpy.first().first().value<Client *>();
+    QVERIFY(leader);
+    QVERIFY(leader->isActive());
+    QCOMPARE(leader->windowId(), leaderWid);
+    QVERIFY(!leader->isTransient());
+
+    QCOMPARE(workspace()->stackingOrder(), (ToplevelList{leader}));
+
+    // Create another group member.
+    windowCreatedSpy.clear();
+    xcb_window_t member1Wid = createGroupWindow(conn.data(), geometry, leaderWid);
+    xcb_map_window(conn.data(), member1Wid);
+    xcb_flush(conn.data());
+
+    QVERIFY(windowCreatedSpy.wait());
+    Client *member1 = windowCreatedSpy.first().first().value<Client *>();
+    QVERIFY(member1);
+    QVERIFY(member1->isActive());
+    QCOMPARE(member1->windowId(), member1Wid);
+    QCOMPARE(member1->group(), leader->group());
+    QVERIFY(!member1->isTransient());
+
+    QCOMPARE(workspace()->stackingOrder(), (ToplevelList{leader, member1}));
+
+    // Create yet another group member.
+    windowCreatedSpy.clear();
+    xcb_window_t member2Wid = createGroupWindow(conn.data(), geometry, leaderWid);
+    xcb_map_window(conn.data(), member2Wid);
+    xcb_flush(conn.data());
+
+    QVERIFY(windowCreatedSpy.wait());
+    Client *member2 = windowCreatedSpy.first().first().value<Client *>();
+    QVERIFY(member2);
+    QVERIFY(member2->isActive());
+    QCOMPARE(member2->windowId(), member2Wid);
+    QCOMPARE(member2->group(), leader->group());
+    QVERIFY(!member2->isTransient());
+
+    QCOMPARE(workspace()->stackingOrder(), (ToplevelList{leader, member1, member2}));
+
+    // Create a group transient.
+    windowCreatedSpy.clear();
+    xcb_window_t transientWid = createGroupWindow(conn.data(), geometry, leaderWid);
+    xcb_icccm_set_wm_transient_for(conn.data(), transientWid, rootWindow());
+
+    // Currently, we have some weird bug workaround: if a group transient
+    // is a non-modal dialog, then it won't be kept above its window group.
+    // We need to explicitly specify window type, otherwise the window type
+    // will be deduced to _NET_WM_WINDOW_TYPE_DIALOG because we set transient
+    // for before (the EWMH spec says to do that).
+    xcb_atom_t net_wm_window_type = Xcb::Atom(
+        QByteArrayLiteral("_NET_WM_WINDOW_TYPE"), false, conn.data());
+    xcb_atom_t net_wm_window_type_normal = Xcb::Atom(
+        QByteArrayLiteral("_NET_WM_WINDOW_TYPE_NORMAL"), false, conn.data());
+    xcb_change_property(
+        conn.data(),               // c
+        XCB_PROP_MODE_REPLACE,     // mode
+        transientWid,              // window
+        net_wm_window_type,        // property
+        XCB_ATOM_ATOM,             // type
+        32,                        // format
+        1,                         // data_len
+        &net_wm_window_type_normal // data
+    );
+
+    xcb_map_window(conn.data(), transientWid);
+    xcb_flush(conn.data());
+
+    QVERIFY(windowCreatedSpy.wait());
+    Client *transient = windowCreatedSpy.first().first().value<Client *>();
+    QVERIFY(transient);
+    QVERIFY(transient->isActive());
+    QCOMPARE(transient->windowId(), transientWid);
+    QCOMPARE(transient->group(), leader->group());
+    QVERIFY(transient->isTransient());
+    QVERIFY(transient->groupTransient());
+    QVERIFY(!transient->isDialog()); // See above why
+
+    QCOMPARE(workspace()->stackingOrder(), (ToplevelList{leader, member1, member2, transient}));
+
+    // Unmap the transient.
+    connect(transient, &Client::windowClosed, this,
+        [](Toplevel *toplevel, Deleted *deleted) {
+            Q_UNUSED(toplevel)
+            deleted->refWindow();
+        }
+    );
+
+    QSignalSpy windowClosedSpy(transient, &Client::windowClosed);
+    QVERIFY(windowClosedSpy.isValid());
+    xcb_unmap_window(conn.data(), transientWid);
+    xcb_flush(conn.data());
+    QVERIFY(windowClosedSpy.wait());
+
+    QScopedPointer<Deleted, WindowUnrefDeleter> deletedTransient(
+        windowClosedSpy.first().at(1).value<Deleted *>());
+    QVERIFY(deletedTransient.data());
+
+    // The transient has to be above each member of the window group.
+    QCOMPARE(workspace()->stackingOrder(), (ToplevelList{leader, member1, member2, deletedTransient.data()}));
 }
 
 void StackingOrderTest::testDontKeepAboveNonModalDialogGroupTransients()
